Polished site styling, fixed display code for text elements

--- a/HabitTracker/Components/HabitCard.razor
+++ b/HabitTracker/Components/HabitCard.razor
@@ -17,7 +17,7 @@
 	<div class="habit-actions">
 		@if (IsDone)
 		{
-			<span>Done!</span>
+			<span class="bi bi-check-circle-fill px-2" style="font-size: 1.4rem;"></span>
 			@if (showPopup)
 			{
 				<span class="popup-message">Habit done, great job!</span>
