--- a/HabitTracker/Components/App.razor
+++ b/HabitTracker/Components/App.razor
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="HabitTracker.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -14,6 +15,9 @@
 
 <body>
     <Routes />
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
     <script src="_framework/blazor.web.js"></script>
 </body>
 
