--- a/HabitTracker/Components/Layout/NavMenu.razor
+++ b/HabitTracker/Components/Layout/NavMenu.razor
@@ -1,25 +1,29 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿<nav class="top-row navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">HabitTracker</a>
+
+        <a class="navbar-brand" href="">Habit Tracker</a>
+
+        <button class="navbar-toggler d-md-none"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#mobileNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
     </div>
-</div>
+</nav>
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
-
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/statistics">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Statistics
-            </NavLink>
-        </div>
-
+<!-- Desktop sidebar -->
+<div class="nav-scrollable d-md-block">
+    <nav class="navbar-nav p-4" style="font-weight: bold; accent-color: black;">
+        <NavLink class="nav-link" href="" Match="NavLinkMatch.All">Home</NavLink>
+        <NavLink class="nav-link" href="/statistics">Statistics</NavLink>
     </nav>
 </div>
 
+<!-- Mobile/small screen collapse menu -->
+<div id="mobileNav" class="collapse d-md-none">
+    <nav class="navbar-nav px-3">
+        <NavLink class="nav-link" href="">Home</NavLink>
+        <NavLink class="nav-link" href="/statistics">Statistics</NavLink>
+    </nav>
+</div>
