--- a/HabitTracker/wwwroot/app.css
+++ b/HabitTracker/wwwroot/app.css
@@ -95,6 +95,7 @@ h2 {
     height: 24px;
 }
 
+
 input[type="checkbox"] {
     position: absolute;
     opacity: 0;
@@ -107,7 +108,7 @@ input[type="checkbox"] {
 
 .checkmark {
     position: absolute;
-    top: 3px;
+    margin-top: 3px;
     left: 0;
     width: 100%;
     height: 100%;
@@ -117,9 +118,11 @@ input[type="checkbox"] {
     transition: background-color 0.2s;
 }
 
-input[type="checkbox"]:checked + .checkmark {
-    background-color: #0d6efd;
-}
+    .checkmark:hover {
+        background-color: #27761c;
+    }
+
+
 
 button {
     font-size: 12px;
