--- a/HabitTracker/Components/Pages/Statistics.razor
+++ b/HabitTracker/Components/Pages/Statistics.razor
@@ -15,6 +15,7 @@
 	<select id="timeframe" @bind="selectedTimeframe">
 		<option value="weekly">Weekly</option>
 		<option value="monthly">Monthly</option>
+		<option value="all time">All time</option>
 	</select>
 </div>
 
