--- a/HabitTracker/wwwroot/app.css
+++ b/HabitTracker/wwwroot/app.css
@@ -133,7 +133,7 @@ button {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #00ffff;
+    background-color: #19b235;
     color: white;
     padding: 10px;
     border-radius: 5px;
