--- a/HabitTracker/Components/Pages/CreateHabit.razor
+++ b/HabitTracker/Components/Pages/CreateHabit.razor
@@ -27,7 +27,7 @@
 		</div>
 
 		<div style="margin-top: 20px;">
-			<button type="submit" class="btn btn-outline-primary p-2" margin-top="100px">Save Habit</button>
+			<button type="submit" disabled="@isProcessing" class="btn btn-outline-primary p-2" margin-top="100px">Save Habit</button>
 		</div>
 
 		@if (showPopUp)
@@ -43,14 +43,19 @@
 
 	private bool showPopUp { get; set; } = false;
 
+	private bool isProcessing { get; set; } = false;
+
 	private async void HandleValidSubmit()
 	{
+		isProcessing = true;
 		showPopUp = true;
 		await Task.Delay(1500);
 		StateHasChanged();
 
 		await habitService.AddHabitAsync(newHabit);
 		newHabit = new Habit();
+
+		isProcessing = false;
 
 		await Task.Delay(500);
 		showPopUp = false;
